--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -40,9 +40,10 @@ title: Index
 ---
 ## Using BOSH to deploy software
 
- * Basic workflow
+ * [Basic workflow](basic-workflow.html)
+    * [Deployment basics](deployment-basics.html)
+       * [Deployment manifest schema](deployment-manifest.html)
     * The Director
-    * [Deployment manifest breakdown](deployment-manifest.html)
     * Basic deployment management commands
        * bosh [upload] stemcell(s)
        * bosh [upload] release(s)
@@ -52,8 +53,10 @@ title: Index
     * Deploying Software step-by-step
        * [explanation of every step of the `bosh deploy` command]
     * Updating deployment to deal with security vulnerabilities
+ * Resource Pools
+    * [VM anti-affinity](vm-anti-affinity.html)
  * [Persistent disks](persistent-disks.html)
- * [VM anti-affinity](vm-anti-affinity.html)
+ * [Networks](networks.html)
  * Running one off tasks
  * Health management
     * Monitoring
