--- a/vm-anti-affinity.html.md.erb
+++ b/vm-anti-affinity.html.md.erb
@@ -2,18 +2,18 @@
 title: VM Anti-affinity
 ---
 
-For certain deployment jobs, you might want to distribute the instances across multiple physical resources of the IaaS. Even though an IaaS abstracts away the underlying hardware resources, most have specific APIs 
-to configure VM affinity and anti-affinity rules. 
+For certain deployment jobs, you might want to distribute the instances across multiple physical resources of the IaaS. Even though an IaaS abstracts away the underlying hardware resources, most have specific APIs
+to configure VM affinity and anti-affinity rules.
 
-One popular example of a deployment job that needs this type of configuration 
-is Hadoop Datanode. If multiple Datanode instances are placed on the 
-same physical machine, replicated data becomes unavailable if 
-that machine fails. To make replication useful in this scenario, 
+One popular example of a deployment job that needs this type of configuration
+is Hadoop Datanode. If multiple Datanode instances are placed on the
+same physical machine, replicated data becomes unavailable if
+that machine fails. To make replication useful in this scenario,
 BOSH allows you to configure the resource pool for a deployment job. You configure VM anti-affinity rules for an IaaS using the `cloud_properties` subblock of the `resource_pools` block in your [deployment manifest](./deployment-manifest.html).
 
 Currently only vSphere CPI provides a way to specify VM anti-affinity rules.
 
-## <a id='vsphere'></a>vSphere Configuration ##
+## <a id='vsphere'></a> vSphere Configuration ##
 
 The vSphere [VM-VM Affinity Rules](http://pubs.vmware.com/vsphere-51/index.jsp#com.vmware.vsphere.resmgmt.doc/GUID-94FCC204-115A-4918-9533-BFC588338ECB.html) feature allows you to specify whether VMs should run on the same host or be kept on separate hosts. As of BOSH version 101 (stemcell 2693), you can configure the vSphere CPI to include all VMs of a specified BOSH resource pool within a single DRS rule and separate the VMs among multiple hosts.
 
@@ -33,7 +33,7 @@ resource_pools:
     datacenters:
     - name: my-dc
       clusters:
-      - my-vsphere-cluster
+      - my-vsphere-cluster:
           drs_rules:
           - name: separate-hadoop-datanodes-rule
             type: separate_vms
@@ -56,9 +56,11 @@ If the vSphere CPI does not place the VMs on different hosts, check that you hav
 - Enabled a DRS rule and associated it with the appropriate VMs.
 - Given the DRS enough time to move the VMs to different hosts.
 
-<p class="note"><strong>Notes</strong>: 
+<p class="note">
+  <strong>Notes</strong>:
 	<ul>
-	<li>The vSphere CPI currently only supports 
+	  <li>The vSphere CPI currently only supports
 one DRS rule per BOSH resource pool.</li>
-<li>If a BOSH resource pool contains only one VM, the vSphere CPI does not create a DRS rule. After BOSH adds a second VM, the vSphere CPI will create and apply a DRS rule to all VMs in the BOSH resource pool.</li>
+    <li>If a BOSH resource pool contains only one VM, the vSphere CPI does not create a DRS rule. After BOSH adds a second VM, the vSphere CPI will create and apply a DRS rule to all VMs in the BOSH resource pool.</li>
+  </ul>
 </p>
