--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -12,6 +12,7 @@ title: Index
  * Comparison to other tools
     * Chef/Puppet
     * Terraform
+    * Juju
  * [Terminology](terminology.html)
 
 ---
@@ -64,10 +65,14 @@ title: Index
     * Resurrector
     * (WIP) Snapshotting
  * Looking inside a BOSH Deployment
-    * Structure of a BOSH vm
-    * Using monit to monitor BOSH vms
+    * Structure of a BOSH VM
+    * Using monit to monitor BOSH VMs
     * Debugging issues with jobs
-    * Location and use of Logs
+    * Location and use of logs
+ * CPIs
+    * [AWS](aws-cpi.html)
+    * [OpenStack](openstack-cpi.html)
+    * [vSphere](vsphere-cpi.html)
  * [Complete BOSH CLI API](sysadmin-commands.html)
 
 ---
